[package]
name        = "TrelloBST"
version     = "0.0.1"
authors     = ["Cyberunner23 <https://github.com/Cyberunner23>"]
description = "Trello Build Status Tool, A tool for setting up a trello page receiving build statuses from Travis-CI and Appveyor."
build       = "build.rs"

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]

[build-dependencies]
serde_codegen = { version = "*", optional = true }
syntex        = "0.24.0"

[dependencies]
clap            = "1.5.3"
hyper           = "0.7.0"
#Currently requires an override "paths = ["/home/cyberunner23/Dev/DEV_PROJ/rust-openssl/"]" in ~/.cargo/config
openssl         = "0.7.4"
rustc-serialize = "*"
serde           = "*"
serde_json      = "*"
serde_macros    = { version = "*", optional = true }
term            = "0.2.14"



