[package]
name        = "TrelloBST"
version     = "0.0.1"
authors     = ["Cyberunner23 <https://github.com/Cyberunner23>"]
description = "Trello Build Status Tool, A tool for setting up a trello page receiving build statuses from Travis-CI and Appveyor."
build       = "build.rs"

[build-dependencies]
serde_codegen = "*"
syntex        = "*"

[dependencies]
clap            = "*"
hyper           = "*"
openssl         = "*"
rustc-serialize = "*"
serde           = "*"
serde_json      = "*"
term            = "*"



